[tool.poetry]
name = "async_activity_monitor"
version = "0.1.0"
description = ""
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async_timeout = "^3.0.1"
janus = "^0.5.0"
pynput = "^1.6.8"
rich = "^5.2.0"
attrs = {version = "^19.3.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
