[tool.poetry]
name = "async_activity"
version = "0.1.0"
description = "Async wrapper around Pynput + a queue/monitor to detect transitions from activity > inactivity and vice versa"
authors = ["Venky Iyer <indigoviolet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
async_timeout = ">=3.0.1"
janus = ">=0.5.0"
pynput = ">=1.6.8"
rich = ">=9.2.0"
attrs = ">=19.3.0"
python-xlib = ">=0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
